Disabled export form autocompletion

--- a/pages/export.html
+++ b/pages/export.html
@@ -28,7 +28,7 @@
                     <h1>Export Data</h1>
                 </div>
             </div>
-            <form id="export-form">
+            <form id="export-form" autocomplete="off">
                 <div id="date-panel" class="panel panel-default col-xs-12 col-md-5">
                     <div class="panel-heading">
                         <label for="date-check" data-pg-collapsed>
