--- a/pages/export.html
+++ b/pages/export.html
@@ -86,7 +86,7 @@
                         </div>
                     </div>
                 </div>
-                <input id="export-button" class="btn col-xs-8 col-xs-offset-2 col-md-4 col-md-offset-4 btn-large btn-primary" type="submit" value="Export">
+                <a href="#" role="button" id="export-button" class="btn col-xs-8 col-xs-offset-2 col-md-4 col-md-offset-4 btn-large btn-primary">Export</a>
             </form>
         </div>
     </body>
